# fire_detect

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: camera.hpp  detection.hpp
src/: detection.cpp
